cropper js pop up solved

--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ img {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 80vh;
     background-color: var(--bg-color);
     justify-content: center;
     align-items: center;
@@ -228,18 +228,24 @@ img {
 
 .crop-container {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
     background-color: var(--bg-color);
-    padding: 20px;
+    padding: 2em;
+    width: calc(100% - 4em);
     max-width: 80%;
     max-height: 80%;
     min-width: 300px;
-    max-width: 600px;
-    overflow: auto;
+    max-width: 500px;
+    overflow: hidden;
+    box-shadow: var(--box-shadow);
 }
 
 .crop-container img {
-    max-width: 60%;
-    max-height: 60%;
+    max-width: 50%;
+    max-height: 50%;
+   
     height: auto;
     width: auto;
 }
@@ -248,26 +254,18 @@ img {
     display: block;
     margin-top: 10px;
 }
-
-#saveCrop {
-    width: 100%;
-    padding: 0.8em;
-    border-radius: 0.5em;
-    border: none;
-    border: 1px solid var(--primary-color);
-    background-color: var(--primary-color);
-    font-size: 1em;
-    text-transform: uppercase;
-    transition: all ease 2s;
-    color: var(--text-color);
-    cursor: pointer;
-
-    position: sticky;
-    bottom: 0;
-    left: 0;
-    margin-top: 10px;
-    z-index: 1;
+.two-button{
+width: 100%;
+display: flex;
+color: var(--text-color);
+transition: all ease 2s;
+align-items: center;
+justify-content: center;
+gap: 1em;
+z-index: 5;
 }
+
+
 
 #imageInput {
     display: none;
@@ -308,10 +306,11 @@ img {
         max-width: 80%;
         font-size: 14px;
     }
-
-    #saveCrop {
-        margin-top: 0;
+    .two-button .button{
+        font-size: 1em;
     }
+
+   
 }
 
 
